# openapi/openapi.yaml
@@ -203,6 +203,62 @@ paths:
       - $ref: '#/components/parameters/media-taxon'
       - $ref: '#/components/parameters/include-children'
       - $ref: '#/components/parameters/filter-by-priority'
+  /media/image_labeling/summary/:
+    get:
+      tags:
+      - media
+      description: Returns aggregated summary data for image labeling filters (taxa, instruments, institutes counts)
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  taxa:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          nullable: true
+                          example: 109473
+                        slug:
+                          type: string
+                          example: amphidinium
+                        name:
+                          type: string
+                          example: Amphidinium
+                        count:
+                          type: integer
+                          example: 3
+                  instruments:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                          example: IFCB
+                        count:
+                          type: integer
+                          example: 589
+                  institutes:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                          example: SMHI
+                        count:
+                          type: integer
+                          example: 589
+                  total_count:
+                    type: integer
+                    example: 596
   /media/artists/:
     get:
       tags:
